--- a/style.css
+++ b/style.css
@@ -1,10 +1,30 @@
 @tailwind base;
-
 @tailwind components;
-
 @tailwind utilities;
 
-.bg-own {
-      background-color: #00043C;
+@import url('https://fonts.googleapis.com/css2?family=Newsreader:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Reggae+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
+.img-test {
+    height: 500px;
+    /* background-image: url(./images/aurora.jpg); */
+    width: 400px;
 }
-
+.bg-own {
+    background-color: #00043c;
+}
+.glass {
+    filter: blur(6px);
+}
+.default {
+    transform: translateX(-30px);
+}
+[data-scroll] {
+    transition: opacity 4s;
+}
+[data-scroll='in'] {
+    opacity: 1;
+}
+[data-scroll='out'] {
+    opacity: 0;
+}
