--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,6 +5,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Newsreader:wght@600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Reggae+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 .img-test {
     height: 500px;
     /* background-image: url(./images/aurora.jpg); */
