--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,6 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 @import url('https://fonts.googleapis.com/css2?family=Newsreader:wght@600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Reggae+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
@@ -14,28 +13,39 @@
     /* background-image: url(./images/aurora.jpg); */
     width: 400px;
 }
+
 .leftEm {
     /* background-image: url("./images/epa.jpg"); */
 }
+
 .rightEm {
     /* background-image: url("./images/epa.jpg"); */
 }
+
+#home {
+    background-image: url(../img/logoepa-v2.png);
+}
+
 .bg-own {
     background-color: #00043c;
 }
+
 .glass {
     backdrop-filter: blur(6px);
 }
+
 [data-scroll] {
     transition: opacity 4s;
 }
+
 [data-scroll='in'] {
     opacity: 1;
-    
 }
+
 [data-scroll='out'] {
     opacity: 0;
 }
+
 img {
     transition: position 5s;
 }
