--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,22 +8,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@1,500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap');
-.img-test {
-    height: 500px;
-    /* background-image: url(./images/aurora.jpg); */
-    width: 400px;
-}
-
-.leftEm {
-    /* background-image: url("./images/epa.jpg"); */
-}
-
-.rightEm {
-    /* background-image: url("./images/epa.jpg"); */
-}
-
 #home {
-    background-image: url(../img/logoepa-v2.png);
+    background-image: url("../img/epa/logoepa-v2.png");
 }
 
 .bg-own {
