--- a/src/css/style.css
+++ b/src/css/style.css
@@ -9,7 +9,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap');
 #home {
-    background-image: url(../img/epa/logoepa-v2.png);
+    background-image: url('../img/epa/logoepa-v2.png');
+    background-position: center;
+    background-size: cover;
 }
 
 .bg-own {
@@ -33,7 +35,7 @@
 }
 
 .text {
-    background: url('../img/logoepa-v2.jpg') center;
+    /* background: url('../img/logoepa-v2.jpg') center; */
     background-clip: text;
     color: transparent;
 }
@@ -64,13 +66,13 @@ html.has-scroll-dragging {
     min-height: 100vh;
 }
 
-[data-scroll-direction="horizontal"] [data-scroll-container] {
+[data-scroll-direction='horizontal'] [data-scroll-container] {
     height: 100vh;
     display: inline-block;
     white-space: nowrap;
 }
 
-[data-scroll-direction="horizontal"] [data-scroll-section] {
+[data-scroll-direction='horizontal'] [data-scroll-section] {
     display: inline-block;
     vertical-align: top;
     white-space: nowrap;
@@ -98,7 +100,7 @@ html.has-scroll-dragging {
     opacity: 1;
 }
 
-[data-scroll-direction="horizontal"] .c-scrollbar {
+[data-scroll-direction='horizontal'] .c-scrollbar {
     width: 100%;
     height: 10px;
     top: auto;
@@ -106,7 +108,7 @@ html.has-scroll-dragging {
     transform: scaleY(1);
 }
 
-[data-scroll-direction="horizontal"] .c-scrollbar:hover {
+[data-scroll-direction='horizontal'] .c-scrollbar:hover {
     transform: scaleY(1.3);
 }
 
@@ -128,7 +130,7 @@ html.has-scroll-dragging {
     cursor: grabbing;
 }
 
-[data-scroll-direction="horizontal"] .c-scrollbar_thumb {
+[data-scroll-direction='horizontal'] .c-scrollbar_thumb {
     right: auto;
     bottom: 0;
 }
