--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,8 +11,40 @@
 #home {
     background-image: url('../img/epa/logoepa-v2.png');
     background-position: center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
     background-size: cover;
 }
+
+#loading {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    position: fixed;
+    display: block;
+    opacity: 1;
+    background-color: rgb(255, 255, 255);
+    transition: opacity 2s ease-in;
+    z-index: 99;
+    text-align: center;
+}
+
+#loading-image {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    opacity: 1;
+    z-index: 100;
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+}
+/* * {
+    transition: all 1s ease-in-out;
+} */
 
 .bg-own {
     background-color: #00043c;
@@ -21,19 +53,10 @@
 .glass {
     backdrop-filter: blur(6px);
 }
-
-[data-scroll] {
-    transition: opacity 4s;
-}
-
-[data-scroll='in'] {
-    opacity: 1;
-}
-
-[data-scroll='out'] {
+/* [data-scroll] {
     opacity: 0;
-}
-
+    transform: translateY(-20px);
+} */
 .text {
     /* background: url('../img/logoepa-v2.jpg') center; */
     background-clip: text;
@@ -43,7 +66,6 @@
 img {
     transition: position 5s;
 }
-
 
 /*! locomotive-scroll v4.1.1 | MIT License | https://github.com/locomotivemtl/locomotive-scroll */
 
